--- a/untitled.html
+++ b/untitled.html
@@ -1,1 +1,1 @@
-<h1 data-label="298332" class="ltx_title_section">Severity De</h1>
+<h1 data-label="298332" class="ltx_title_section">Severity Defintions</h1>
